--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ side_bar_repo_limit: 5
 # ---------------- #
 author: 王鹏锋
 organization: sohu.com
-organization_url: https://www.sohu.com
+organization_url: https://k.sohu.com
 github_username: ximsfei
 location: Beijing, China
 email: 550616352@qq.com
