feat: update config

--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: 王鹏锋
-organization: sohu.com
-organization_url: https://k.sohu.com
+organization: alipay.com
+organization_url: https://www.alipay.com/
 github_username: ximsfei
-location: Beijing, China
+location: Hangzhou, China
 email: 550616352@qq.com
 
 # ---------------- #
